--- a/index.html
+++ b/index.html
@@ -6,34 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Muhammad Aminu Salihu & Glauber Bannwart">
   <title>Awesome Book Store - The Readers #1 Online Marketplace</title>
-  <style rel="stylesheet" type="text/css" link="/style.css"></style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section class="displaysection">
-    <h1 class="maintitle">Awesome Books</h1>
-    <br>
-    <div class="booklistparent">
-    <br>
-    <br>
-    <!-- Add & remove books from this div -->
-    </div>
+<div id="book-app">
+  <header>
+    <h1>Awesome Books</h1>
+  </header>
 
-  </section>
-<!-- Form/Input section -->
-  <section class="formsection">
-    <br>
-    <input type="text" placeholder="Title">
-    <br>
-    <br>
-    <input type="text" placeholder="Author">
-    <br>
-    <br>
-    <button class="addbook">Add</button>
-    <br>
-    <br>
-  </section>
+<!-- Book list Added using Javascript -->
+  <div class="items">
 
-  <script href="/app.js"></script>
+  </div>
+
+  <!-- Form/Input section -->
+  <form class="book-form">
+    <input type="text" id="book-title" name="title" placeholder="Book Title">
+    <input type="text" id="book-author" name="author" placeholder="Book Author">
+    <button type="submit" id="add">Add</button>
+  </form>
+  </div>
+
+  <script src="app.js"></script>
 </body>
-
 </html>
