Add classes in javascript and update styling

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
 <div id="book-app">
   <header>
-    <h1>Awesome Books</h1>
+    <h1>All awesome Books</h1>
   </header>
 
 <!-- Book list Added using Javascript -->
   <div class="items">
 
+
   </div>
 
   <!-- Form/Input section -->
   <form class="book-form">
+    <h2 class="form-heading">Add  a new book</h2>
     <input type="text" id="book-title" name="title" placeholder="Book Title">
     <input type="text" id="book-author" name="author" placeholder="Book Author">
     <button type="submit" id="add">Add</button>
