--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav class="navigation">
       <h1><a href="#books-list">Awesome</a></h1>
       <ul>
-        <li><a class="nav_list" href="#books-list">List</a></li>
-        <li><a class="nav_add" href="#add-book">Add New</a></li>
-        <li><a class="nav_contact" href="#contact-info">Contact</a></li>
+        <li><a id="nav_list" href="#books-list">List</a></li>
+        <li><a id="nav_add" href="#add-book">Add New</a></li>
+        <li><a id="nav_contact" href="#contact-info">Contact</a></li>
       </ul>
     </nav>
       <h1>All awesome Books</h1>
@@ -23,13 +23,13 @@
 
   <main id="book-app">
 <!-- Book list Added using Javascript -->
-  <div class="items">
+  <div id="itemList" class="items">
 
 
   </div>
 
     <!-- Form/Input section -->
-    <form class="book-form">
+    <form id="form" class="book-form hidden">
       <h2 class="form-heading">Add  a new book</h2>
       <input type="text" id="book-title" name="title" placeholder="Book Title">
       <input type="text" id="book-author" name="author" placeholder="Book Author">
@@ -41,7 +41,7 @@
 
 
   <!-- Contact info section -->
-  <section class="contact">
+  <section id="contactsection" class="contact hidden">
     <h2>Contact Information</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut
       blanditiis odio optio rerum vitae voluptate</p>
