--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Muhammad Aminu Salihu & Glauber Bannwart">
   <title>Awesome Book Store - The Readers #1 Online Marketplace</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
