Module Luxon with Date Time on index.HTML file.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Muhammad Aminu Salihu & Glauber Bannwart">
   <title>Awesome Book Store - The Readers #1 Online Marketplace</title>
-    <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
   <header>
     <nav class="navigation">
@@ -18,25 +20,26 @@
         <li><a id="nav_contact" href="#contact-info">Contact</a></li>
       </ul>
     </nav>
-      <h1>All awesome Books</h1>
+    <div id="time"></div>
+    <h1>All awesome Books</h1>
   </header>
 
   <main id="book-app">
-<!-- Book list Added using Javascript -->
-  <div id="itemList" class="items">
+    <!-- Book list Added using Javascript -->
+    <div id="itemList" class="items">
 
 
-  </div>
+    </div>
 
     <!-- Form/Input section -->
     <form id="form" class="book-form hidden">
-      <h2 class="form-heading">Add  a new book</h2>
+      <h2 class="form-heading">Add a new book</h2>
       <input type="text" id="book-title" name="title" placeholder="Book Title">
       <input type="text" id="book-author" name="author" placeholder="Book Author">
       <button type="submit" id="add">Add</button>
     </form>
 
-    </main>
+  </main>
 
 
 
@@ -62,7 +65,7 @@
   <footer>
     <p>&copy;Copyright 2023 <a href=""> The Readers </a> - All Rights Reserved</p>
   </footer>
-
   <script type="module" src="/index.js"></script>
 </body>
+
 </html>
