--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p>&copy;Copyright 2023 <a href=""> The Readers </a> - All Rights Reserved</p>
   </footer>
   
-  <script type="module" src="/index.js"></script>
+  <script src="/index.js" type="module"></script>
 </body>
 
 </html>
